[tool.poetry]
name = "pybug"
version = "0.1.0"
description = ""
authors = ["Andrew Wason <rectalogic@rectalogic.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
